# git-agecrypt

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.test  README.md  flake.nix  justfile  rust-toolchain.toml  shell.nix  todo.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  pages.yml  release.yml
docs/: README.md  index.html  styles.css
docs/assets/: app-bottom.jsx  app-mid.jsx  app-root.jsx  app-top.jsx  data.js  logos.jsx  terminal.jsx
scripts/: test-docker.sh
src/: age.rs  ctx.rs  git.rs
src/cli/: args.rs  internal.rs  public.rs
src/config/: age_identities.rs  app.rs  git.rs
tests/: e2e.rs
